--- a/latex/main_8c.tex
+++ b/latex/main_8c.tex
@@ -26,10 +26,12 @@ Nikola Petrovic
 \subsubsection{\texorpdfstring{main()}{main()}}
 {\footnotesize\ttfamily int main (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})}
 
-In this variable we are storing the messages added by user
+In this variable we are storing the messages added by user.
+
+Variable for choice.
 
 The problem was that the newline I input when reading choice was being taken as input for the next gets(message), and so it was reading an empty string. Because of that I added an artificial getchar after scanf to absorb the newline. ~\newline
 ~\newline
- In this case we encrypt the message given by user
+ In this case we encrypt the message given by user.
 
-In this case we decrypt the message given by user 
+In this case we decrypt the message given by user. 
